...
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/facilityPFP">

            <Button
                android:id="@+id/uploadPFP"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="Upload" />

            <Button
...
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/input_background"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/facilityNameTV"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:text="@string/name"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editTextFacilityName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/primary_blue"
                    android:ems="10"
                    android:hint="@string/name"
...
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/input_background"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/facilityEmailTV"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:text="@string/email"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editTextFacilityEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="#3D5AFE"
                    android:ems="10"
                    android:hint="@string/email"
...
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/input_background"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/facilityAddressTV"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:text="Address"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editTextFacilityAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="#3D5AFE"
                    android:ems="10"
                    android:hint="Address"
...
                    android:padding="10dp"
                    android:text="@string/phone_number"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editTextFacilityPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="#3D5AFE"
                    android:ems="10"
                    android:hint="@string/phone_number"
...
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="50dp"
...
