...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:columnCount="2">

            <Button
                android:id="@+id/edit_event_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="3dp"
                android:text="Update\nEvent Banner"
                android:textSize="12sp"
                app:icon="@drawable/baseline_file_upload_24" />

            <Button
                android:id="@+id/qr_code_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="3dp"
                android:text="View\nQR CODE"
                android:textSize="12sp"
                app:icon="@drawable/baseline_qr_code_24" />

            <Button
                android:id="@+id/view_entrants_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="3dp"
                android:text="@string/manage_entrants"
                android:textSize="12sp"
...
